# file-scout

./: .prettierrc.cjs  LICENSE  README.md  components.json  package.json  pnpm-lock.yaml  tailwind.config.js  todo.md  tsconfig.json  vite.config.ts
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: emit_event.rs  file_search.rs  main.rs  open_file.rs  open_folder.rs  start_search.rs
src/assets/css/: custom-scrollbar.css  infinite-progress-bar.css
src/components/main-page/: action-buttons.tsx  ignored-folders.tsx  keyword-input.tsx  path-input.tsx  search-status-text.tsx
src/components/shared/: index.ts  infinite-progress-bar.tsx  logo.tsx  search-progress-bar.tsx
src/components/ui/: index.ts
src/components/ui/icons/: copy.icon.tsx  file.icon.tsx  folder.icon.tsx  index.ts
src/lib/helpers/: index.ts  status-to-human.ts
src/lib/services/: event-listener.ts
src/lib/store/: app.store.ts
src/pages/: main-page.tsx  result-page.tsx
src/types/: app-event.enum.ts  app-page.enum.ts  index.ts  search-event.enum.ts
